--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "aws/aws-sdk-php-laravel": "^3.3",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.5"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
